--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h3>Pet Rock: limestone</h3>
                     <P>$15.00 each</P>
                 </div>
-                <div class="product-quantity">
+                <div class="product-quanity">
                     <button id="quantity-down">-</button>
                     <button id="quantity-up">+</button>
                     <div class="total-quantity">Quantity: 1</div>
